# humio-mcp

./: .gitignore  README.md  config.example.toml  pyproject.toml  test_ssl.py
src/humio_mcp/: __init__.py  config.py  humio_client.py  models.py  server.py
